--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
 	<meta charset="UTF-8">
 	<title>Login App</title>
 	<base href="/"></base>
-	<link rel="stylesheet" href="./style.css">
+	<link rel="stylesheet" href="./WP-calculator/style.css">
 </head>
 <body>
 	<div ng-view id="mainContent"></div>
 
-	<script src="./angular.js"></script>
-	<script src="./angular-route.js"></script>
-	<script src="./script.js"></script>
+	<script src="./WP-calculator/angular.js"></script>
+	<script src="./WP-calculator/angular-route.js"></script>
+	<script src="./WP-calculator/script.js"></script>
+
 </body>
 </html>
