--- a/index.html
+++ b/index.html
@@ -3,15 +3,14 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Login App</title>
-	<base href="/"></base>
-	<link rel="stylesheet" href="./WP-calculator/style.css">
+	<link rel="stylesheet" href="style.css">
 </head>
 <body>
 	<div ng-view id="mainContent"></div>
 
-	<script src="./WP-calculator/angular.js"></script>
-	<script src="./WP-calculator/angular-route.js"></script>
-	<script src="./WP-calculator/script.js"></script>
+	<script src="angular.js"></script>
+	<script src="angular-route.js"></script>
+	<script src="script.js"></script>
 
 </body>
 </html>
